--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ img {
   --dark-bg-color: #2f303a;
   --gray-bg-color: #f5f4fa;
   --gray-border-color: #ececec;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 html,
 body {
@@ -59,6 +60,61 @@ body {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+}
+
+/* Modal */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  opacity: 1;
+
+  transition: opacity 250ms var(--timing-function);
+}
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+/* modal */
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 528px;
+  height: 581px;
+  display: flex;
+  justify-content: flex-end;
+
+  transform: translate(-50%, -50%);
+
+  transition: translate 250ms var(--timing-function);
+
+  background: var(--primary-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal-close-btn {
+  height: 30px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 8px;
+  margin-right: 8px;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+.modal-close-icon {
+  height: 11px;
+  width: 11px;
 }
 
 /* Header */
@@ -94,12 +150,29 @@ body {
 .nav__link {
   display: block;
   padding: 32px 0;
+  position: relative;
 
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
+  transition: color 250ms var(--timing-function);
+}
+.nav__link[href="#"] {
+  color: var(--button-hover-color);
+}
+.nav__link[href="#"]::after {
+  content: "";
+  position: absolute;
+
+  display: block;
+  width: 100%;
+  height: 5px;
+  bottom: 0;
+
+  border-radius: 2px;
+  background-color: var(--button-hover-color);
 }
 .contakts__list {
   display: flex;
@@ -116,6 +189,9 @@ body {
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
   fill: var(--secondary-text-color);
+
+  transition: color 250ms var(--timing-function),
+    fill 250ms var(--timing-function);
 }
 .mail-icon {
   width: 16px;
@@ -134,9 +210,7 @@ body {
   color: var(--button-hover-color);
   fill: var(--button-hover-color);
 }
-.nav__link[href="#"] {
-  color: var(--button-hover-color);
-}
+
 /* Main */
 
 /* Hero */
@@ -184,15 +258,18 @@ body {
 
   color: var(--primary-white-color);
   background-color: var(--button-hover-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
   border: none;
   border-radius: 4px;
+
+  transition: background-color 250ms var(--timing-function),
+    box-shadow 250ms var(--timing-function);
 }
-.hero__btn:hover {
-  cursor: pointer;
-}
+.hero__btn:hover,
 .hero__btn:active {
-  background: #188ce8;
+  cursor: pointer;
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* Особливості */
@@ -204,9 +281,6 @@ body {
   justify-content: center;
   gap: 30px;
 }
-/* .features__item {
-  width: 270px;
-} */
 .features__item-bg {
   width: 270px;
   height: 120px;
@@ -250,11 +324,42 @@ body {
 .we-working__list {
   display: flex;
 }
+
 .we-working__item:not(:last-child) {
   margin-right: 30px;
 }
 .we-working__item-img {
   width: 370px;
+}
+.we-working-thumb {
+  position: relative;
+}
+
+.we-working-thumb::before {
+  display: inline-block;
+  content: "";
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.we-working-owerlay-title {
+  position: absolute;
+  bottom: 27px;
+  left: 50%;
+  transform: translate(-50%, 0);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-white-color);
 }
 
 /*  Наша команда  */
@@ -326,12 +431,16 @@ body {
   align-items: center;
   border-radius: 50%;
   background-color: transparent;
+
+  transition: background-color 250ms var(--timing-function);
 }
 .social-icon {
   display: inline-block;
   width: 20px;
   height: 20px;
   fill: #afb1b8;
+
+  transition: fill 250ms var(--timing-function);
 }
 
 .social-links__link:focus,
@@ -372,6 +481,9 @@ body {
   border-radius: 4px;
   cursor: pointer;
   fill: #afb1b8;
+
+  transition: fill 250ms var(--timing-function),
+    border-color 250ms var(--timing-function);
 }
 .clients-link:hover,
 .clients-link:focus {
@@ -411,6 +523,8 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+
+  transition: color 250ms var(--timing-function);
 }
 .address {
   font-style: normal;
@@ -443,6 +557,8 @@ body {
   padding: 12px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
+
+  transition: background-color 250ms var(--timing-function);
 }
 .footer-social-icon {
   display: inline-block;
@@ -477,9 +593,14 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   border: none;
+
   background-color: var(--gray-bg-color);
   border-radius: 4px;
   cursor: pointer;
+
+  transition: color 250ms var(--timing-function),
+    background-color 250ms var(--timing-function),
+    box-shadow 250ms var(--timing-function);
 }
 .filter-buttons__item:not(:last-child) {
   margin-right: 8px;
@@ -504,6 +625,8 @@ body {
   height: 404px;
   color: var(--primary-text-color);
   background-color: var(--primary-white-color);
+
+  transition: box-shadow 250ms var(--timing-function);
 }
 
 /* calc((100% - кол-во маржинов в строке * значение маржина) / кол-во елементов в строке) */
@@ -525,11 +648,52 @@ body {
 .filter-list__item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 } */
+.filter-link-thumb {
+  position: relative;
+  overflow: hidden;
+}
 .filter-list__item-img {
   width: 370px;
+}
+.thumb-text {
+  position: absolute;
   display: block;
+  width: 322px;
+  top: 0;
+  left: 24px;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: calc(28 / 18);
+  letter-spacing: 0.03em;
+  color: var(--primary-white-color);
+
+  transform: translateY(175%);
+  transition: transform 250ms var(--timing-function);
+}
+.filter-link-thumb::before {
+  display: inline-block;
+  content: "";
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  transition: transform 250ms var(--timing-function);
+}
+.filter-link:hover .filter-link-thumb::before {
+  transform: translateY(0);
+}
+.filter-link:hover .thumb-text {
+  transform: translateY(64px);
 }
 .filter-list__item-title {
+  top: 0;
+  left: 0;
   margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
