--- a/css/style.css
+++ b/css/style.css
@@ -65,15 +65,21 @@ body {
 /* Modal */
 .backdrop {
   position: fixed;
+
   top: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
+  right: 0;
+  bottom: 0;
+
+  z-index: 100;
+
+  /* height: 100%;
+  width: 100%; */
+
   background-color: rgba(0, 0, 0, 0.2);
 
-  opacity: 1;
-
-  transition: opacity 250ms var(--timing-function);
+  transition: opacity 250ms var(--timing-function),
+    visibility 250ms var(--timing-function);
 }
 .backdrop.is-hidden {
   visibility: hidden;
@@ -112,9 +118,14 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 }
+.modal-close-btn:hover .modal-close-icon,
+.modal-close-btn:active .modal-close-icon {
+  transform: rotate(1turn);
+}
 .modal-close-icon {
   height: 11px;
   width: 11px;
+  transition: transform 400ms ease-in-out;
 }
 
 /* Header */
